--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,7 @@
     <artifactId>spring-learn</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>spring-learn</name>
-    <packaging>pom</packaging>
-    <modules>
-        <module>server-demo</module>
-        <module>client-demo</module>
-    </modules>
+    <packaging>jar</packaging>
     <repositories>
         <repository>
             <id>apache-staging</id>
