--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
     <artifactId>spring-learn</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>spring-learn</name>
-    <packaging>jar</packaging>
     <repositories>
         <repository>
             <id>apache-staging</id>
@@ -13,6 +12,16 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
 
     </dependencies>
 </project>
