比较springboot与原生spring启动方式的区别

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>server-demo</module>
         <module>client-demo</module>
+        <module>original-spring-framework</module>
     </modules>
     <repositories>
         <repository>
