--- a/server-demo/src/main/resources/application.properties
+++ b/server-demo/src/main/resources/application.properties
@@ -1,3 +1,42 @@
 server.port=8080
 
 logging.level.root=info
+
+
+
+# ?4???key???druid??????????????4???
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/myBlog?characterEncoding=utf8&autoReconnect=true&useSSL=false&dailOverReadOnly=false&serverTimezone=UTC
+spring.datasource.druid.username=root
+spring.datasource.druid.password=123456
+spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ?????????????
+spring.datasource.druid.initial-size=5
+# ???????
+spring.datasource.druid.max-active=30
+# ???????
+spring.datasource.druid.min-idle=1
+# ????????????????
+spring.datasource.druid.max-wait=60000
+# ???????????????????????????????
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+# ????????????????
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+# ???????????sql??????????
+spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
+# ?????true?????????????????????????????????timeBetweenEvictionRunsMillis???validationQuery?????????
+spring.datasource.druid.test-while-idle=true
+# ???????validationQuery?????????????????????
+spring.datasource.druid.test-on-borrow=false
+# ???????validationQuery?????????????????????
+spring.datasource.druid.test-on-return=false
+# ????preparedStatement????PSCache?PSCache???????????????????oracle??mysql??????
+spring.datasource.druid.pool-prepared-statements=true
+# ???PSCache???????0????0??poolPreparedStatements???????true?
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=50
+# ?????????filters????????sql????
+spring.datasource.druid.filters=stat,wall
+# ??connectProperties?????mergeSql????SQL??
+spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+# ????DruidDataSource?????
+spring.datasource.druid.use-global-data-source-stat=true
